fix: dark mode colors for text

--- a/src/styles/cyan-color-theme-vars.sass
+++ b/src/styles/cyan-color-theme-vars.sass
@@ -1,8 +1,18 @@
 :root
-  .mode--light
+  .cyan--mode--light
     --charna-body-color: #f5f5f5
-    --cyan-toggle-knob-color-on: #00bcd4
-    --cyan-toggle-knob-color-off: #cca
-    --cyan-toggle-knob-back-color-off: #668
-    --cyan-toggle-knob-back-color-on: #99a
+    --cyan-toggle-knob-color-on: #a2e4ec
+    --cyan-toggle-knob-color-off: #e7fbfb
+    --cyan-toggle-knob-back-color-off: #76c8d5
+    --cyan-toggle-knob-back-color-on: #53abbb
     --cyan-heading-color: #388ea1
+    --cyan-text-color: #334f5f
+    --cyan-base-color: #ffffff
+  .cyan--mode--dark
+    --cyan-base-color: #121212
+    --cyan-heading-color: #a2e4ec
+    --cyan-text-color: rgba(255, 255, 255, 0.87)
+    --cyan-toggle-knob-color-on: #a2e4ec
+    --cyan-toggle-knob-color-off: #e7fbfb
+    --cyan-toggle-knob-back-color-off: #76c8d5
+    --cyan-toggle-knob-back-color-on: #53abbb
