--- a/src/styles/cyan-typography-vars.sass
+++ b/src/styles/cyan-typography-vars.sass
@@ -3,7 +3,13 @@
   --cyan-ui-font-size: 14px
   --cyan-ui-font-weight: 400
   --cyan-ui-line-height: 14px
-  // h1
+  // Headers
   --cyan-h1-font-size: 48px
   --cyan-h1-font-weight: 400
   --cyan-h1-line-height: 56px
+  // Basic text
+  --cyan-text-font-family: 'Cabin',sans-serif
+  --cyan-text-font-size: 17px
+  --cyan-text-font-weight: 400
+  --cyan-text-line-height: 24px
+  --cyan-text-letter-spacing: 0.5px
